[package]
name = "semble"
version = "0.1.0"
edition = "2021"
description = "Fast and Accurate Code Search for Agents"
license = "MIT"

[[bin]]
name = "semble_rs"
path = "src/main.rs"

[lib]
name = "semble"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
ignore = "0.4"
ndarray = "0.15"
tokenizers = "0.20"
safetensors = "0.4"
hf-hub = "0.4"
half = "2"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
dirs = "5"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
